--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Deep Into The Sea">
+        <meta name="description" content="Deep Into The Space">
         <meta name="author" content="Theodorus Zhou">
         <title>Posts</title>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=http://chaoxuprime.com/mathjax_conf.js">
@@ -18,7 +18,7 @@
     <body class="tex2jax_ignore">
       <header class="hide-on-print">
           <div id="blog-title">
-              <a href="/">Deep Into The Sea</a>
+              <a href="/">Deep Into The Space</a>
           </div>
           <nav>
               <ul>
@@ -34,8 +34,8 @@
 
           <table class="postindex" style="width:100%">
             <tr>
-    <td><a href="/posts/2018-03-02-test.html">test</a></td>
-    <td class="right"><time>2018-03-02</time></td>
+    <td><a href="/posts/2018-03-03-Website-deployment-record.html">Blog website deployment record</a></td>
+    <td class="right"><time>2018-03-03</time></td>
 </tr>
 
           </table>
