--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
           <table class="postindex" style="width:100%">
             <tr>
+    <td><a href="/posts/2018-03-04-Develop-using-pycharmIDE.html">Develop python projects using PyCharm IDE</a></td>
+    <td class="right"><time>2018-03-04</time></td>
+</tr>
+<tr>
     <td><a href="/posts/2018-03-03-Website-deployment-record.html">Blog website deployment record</a></td>
     <td class="right"><time>2018-03-03</time></td>
 </tr>
