--- a/src/wishlist.html
+++ b/src/wishlist.html
@@ -36,7 +36,7 @@
 You should use ✔ or ✗ to label each one at the end of each month</p>
 <h2>2018-03</h2>
 <ul>
-<li><a href="http://www.canda.cn/new-arrival/men/200202102.html">C&amp;A Pant</a></li>
+<li><a href="http://www.canda.cn/new-arrival/men/200202102.html">C&amp;A Pant</a> ✔ </li>
 </ul>
       </article>
       <footer class="hide-on-print">© 2010 - <script>document.write(new Date().getFullYear())</script> Theodorus Zhou. Licensed under <a href="http://www.wtfpl.net/txt/copying/">WTFPL v2</a> unless otherwise specified. <a href="/README.html">Blog README</a>.</footer>
