Add horizon memory

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
           <table class="postindex" style="width:100%">
             <tr>
+    <td><a href="/posts/2018-03-16-Horizon-memory.html">My memory in Horizon Co.</a></td>
+    <td class="right"><time>2018-03-16</time></td>
+</tr>
+<tr>
     <td><a href="/posts/2018-03-09-How-to-submit-job-to-cluster.html">How to submit job to cluster?</a></td>
     <td class="right"><time>2018-03-09</time></td>
 </tr>
