--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
           <table class="postindex" style="width:100%">
             <tr>
+    <td><a href="/posts/2018-04-08-Preliminary-understanding-of-segmentation-research.html">Preliminary understanding of segmentation research</a></td>
+    <td class="right"><time>2018-04-08</time></td>
+</tr>
+<tr>
     <td><a href="/posts/2018-03-16-Horizon-memory.html">My memory in Horizon Co.</a></td>
     <td class="right"><time>2018-03-16</time></td>
 </tr>
