--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
           <table class="postindex" style="width:100%">
             <tr>
+    <td><a href="/posts/2018-05-17-Long-term-code-snippets.html">Long time code snippets</a></td>
+    <td class="right"><time>2018-05-17</time></td>
+</tr>
+<tr>
     <td><a href="/posts/2018-05-16-WestWorld-dialogue.html">West World impressive dialogue</a></td>
     <td class="right"><time>2018-05-16</time></td>
 </tr>
