--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
           <table class="postindex" style="width:100%">
             <tr>
+    <td><a href="/posts/2018-11-05-Paper-writing-guide.html">Paper writing guide</a></td>
+    <td class="right"><time>2018-11-05</time></td>
+</tr>
+<tr>
     <td><a href="/posts/2018-10-31-Places-list-for-travel.html">Places list to travel</a></td>
     <td class="right"><time>2018-10-31</time></td>
 </tr>
