--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <nav>
               <ul>
                   <li><a href="/">Home</a></li>
+                  <li><a href="/src/index_love.html">Love</a></li>
                   <li><a href="/src/Resume.pdf">About</a></li>
-                  <li><a href="/src/Resume.pdf">Resume</a></li>
                   <li><a href="/src/wishlist.html">Wishlist</a></li>
               </ul>
           </nav>
