--- a/src/index_love.html
+++ b/src/index_love.html
@@ -41,7 +41,8 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2018, 8, 26);
+        <!--together.setFullYear(2018, 8, 26);-->
+        together.setFullYear(2018, 6, 21);
 		together.setHours(17);
 		together.setMinutes(0);
 		together.setSeconds(0);
