--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <ul>
                   <li><a href="/">Home</a></li>
                   <li><a href="/src/index_love.html">Love</a></li>
-                  <li><a href="/src/Resume.pdf">About</a></li>
+                  <li><a href="/src/Resume.pdf">Resume</a></li>
                   <li><a href="/src/wishlist.html">Wishlist</a></li>
               </ul>
           </nav>
@@ -34,6 +34,10 @@
 
           <table class="postindex" style="width:100%">
             <tr>
+    <td><a href="/posts\2019-02-21-Fanfou-Digest-2019.html">Fanfou Digest 2019</a></td>
+    <td class="right"><time>posts\2019-02-21</time></td>
+</tr>
+<tr>
     <td><a href="/posts\2018-11-05-Paper-writing-guide.html">Paper writing guide</a></td>
     <td class="right"><time>posts\2018-11-05</time></td>
 </tr>
