--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
           <table class="postindex" style="width:100%">
             <tr>
+    <td><a href="/posts\2019-02-25-Trump-The-Art-of-The-Deal.html">Trump - The Art of The Deal</a></td>
+    <td class="right"><time>posts\2019-02-25</time></td>
+</tr>
+<tr>
     <td><a href="/posts\2019-02-21-Fanfou-Digest-2019.html">Fanfou Digest 2019</a></td>
     <td class="right"><time>posts\2019-02-21</time></td>
 </tr>
