--- a/src/biography.html
+++ b/src/biography.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Love, Think and Past">
-        <meta name="author" content="Theodorus">
-        <title>$htmltitle$</title>
+        <meta name="author" content="Theodorus Zhou">
+        <title>Posts</title>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=http://chaoxuprime.com/mathjax_conf.js">
         </script>
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
@@ -25,16 +25,17 @@
                   <li><a href="/">Home</a></li>
                   <li><a href="/src/biography.html">Biography</a></li>
                   <li><a href="/src/Resume.pdf">Resume</a></li>
-                  <!--<li><a href="/src/wishlist.html">Wishlist</a></li>-->
               </ul>
           </nav>
       </header>
       <article>
-          <h1 id="article-title">$title$</h1>
-          <div>
-          $body$
-          </div>
-          <div class="info">Posted by Theodorus Zhou on $date$. </div>
+          <h1 id="article-title">Biography</h1>
+          <ul>
+<li>[2019.10.26-2019.11.03] Attend <a href="http://iccv2019.thecvf.com">ICCV 2019</a> in Seoul, Koera. To see beautiful girls~</li>
+<li>[2019.06.26-2019.10.26] Working as an algorithm research intern of <a href="https://www.horizon.ai">Horizon Robotics</a>. Unhappy here :(</li>
+<li>[2018.12.25-2019.06.25] Enjoy the wonderful time in Huazhong Univ., and win the 5th of <a href="https://davischallenge.org/challenge2019/leaderboards.html">DAVIS'19 semi-supervised VOS track</a>. Boring challenge because of no idea...</li>
+<li>[...] Update when I want to.</li>
+</ul>
       </article>
       <footer class="hide-on-print">© 2010 - <script>document.write(new Date().getFullYear())</script> Theodorus Zhou. Licensed under <a href="http://www.wtfpl.net/txt/copying/">WTFPL v2</a> unless otherwise specified. <a href="/README.html">Blog README</a>.</footer>
 
