--- a/src/biography.html
+++ b/src/biography.html
@@ -31,9 +31,9 @@
       <article>
           <h1 id="article-title">Biography</h1>
           <ul>
-<li>[2019.10.26-2019.11.03] Attend <a href="http://iccv2019.thecvf.com">ICCV 2019</a> in Seoul, Koera. To see beautiful girls~</li>
+<li>[2019.10.26-2019.11.03] Attend <a href="http://iccv2019.thecvf.com">ICCV 2019</a> in Seoul, Koera. To eat chicken and see beauties~</li>
 <li>[2019.06.26-2019.10.26] Working as an algorithm research intern of <a href="https://www.horizon.ai">Horizon Robotics</a>. Unhappy here :(</li>
-<li>[2018.12.25-2019.06.25] Enjoy the wonderful time in Huazhong Univ., and win the 5th of <a href="https://davischallenge.org/challenge2019/leaderboards.html">DAVIS'19 semi-supervised VOS track</a>. Boring challenge because of no idea...</li>
+<li>[2018.12.25-2019.06.25] Enjoy the wonderful time in Huazhong Univ., and win the 5th of <a href="https://davischallenge.org/challenge2019/leaderboards.html">DAVIS'19 semi-supervised VOS track</a>.</li>
 <li>[...] Update when I want to.</li>
 </ul>
       </article>
