--- a/README.html
+++ b/README.html
@@ -29,11 +29,8 @@
           </nav>
       </header>
       <article>
-          <h1 id="article-title">README</h1>
-          <h1>Notes</h1>
-<ul>
-<li>The css of the blog is forked from a <a href="https://github.com/chaoxu/chaoxu.github.io/tree/develop">git repository</a>. </li>
-</ul>
+          <h1 id="article-title">## Love, Think and Past</h1>
+          <p>[Note] The css of the blog is forked from <a href="https://github.com/chaoxu/chaoxu.github.io/tree/develop">here</a>. </p>
       </article>
       <footer class="hide-on-print">© 2010 - <script>document.write(new Date().getFullYear())</script> Theodorus Zhou. Licensed under <a href="http://www.wtfpl.net/txt/copying/">WTFPL v2</a> unless otherwise specified. <a href="/README.html">Blog README</a>.</footer>
 
