--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Love, Think and Past">
+        <meta name="description" content="Love, Thought and Past">
         <meta name="author" content="Theodorus Zhou">
         <title>Posts</title>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=http://chaoxuprime.com/mathjax_conf.js">
@@ -18,7 +18,7 @@
     <body class="tex2jax_ignore">
       <header class="hide-on-print">
           <div id="blog-title">
-              <a href="/">Love, Think and Past</a>
+              <a href="/">Love, Thought and Past</a>
           </div>
           <nav>
               <ul>
